jqueryをグローバルに展開

--- a/src/app/components/layouts/sidebar/sidebar.component.html
+++ b/src/app/components/layouts/sidebar/sidebar.component.html
@@ -7,5 +7,8 @@
   <li class="bold" (click)=courseMyIndex() *ngIf="_auth.getStatus()" ><a class="waves-effect waves-cyan"><i class="mdi-action-list"></i> Myコース一覧</a></li>
   <li class="bold" (click)=entriesIndex() *ngIf="_auth.getStatus()" ><a class="waves-effect waves-cyan"><i class="mdi-action-history"></i> エントリー履歴</a></li>
 </ul>
-<a href="javascript:void(0)" data-activates="slide-out" class="sidebar-collapse btn-floating btn-medium waves-effect waves-light hide-on-large-only cyan"><i class="mdi-navigation-menu"></i></a>
+<a href="javascript:void(0)"
+   data-activates="slide-out"
+   class="sidebar-collapse btn-floating btn-medium waves-effect waves-light hide-on-large-only cyan">
+  <i class="mdi-navigation-menu"></i></a>
 
