--- a/src/sass/theme-components/_miscellaneous.scss
+++ b/src/sass/theme-components/_miscellaneous.scss
@@ -248,8 +248,8 @@ tr.group {
 .collapsible-header:after {
     font-family: "Material-Design-Icons";
     content: "\e7c3";
-    float: right; 
-    color: #9e9e9e; 
+    float: right;
+    color: #9e9e9e;
     font-size: 18px;
 }
 .collapsible-header.active:after {
@@ -260,4 +260,5 @@ tr.group {
 	position: absolute; //DOTHIS
 	top: -14px;
 	font-size: 0.8rem;
+  margin-left: 5px;
 }
