materialize を モジュール化したり

--- a/src/app/components/courses/form/form.component.html
+++ b/src/app/components/courses/form/form.component.html
@@ -151,10 +151,10 @@
     <!-- 問題を追加 ここまで -->
 
     <!-- 問題作成処理のプログレスパー -->
-    <div class="progress">
+    <!--<div class="progress">-->
       <!--<div *ngIf="questionLoading"-->
            <!--class="indeterminate"></div>-->
-    </div>
+    <!--</div>-->
 
     <div id="questions_tab"
          style="width: 100%;">
