パスワード再設定実装中

--- a/src/app/components/auth/login/login.component.html
+++ b/src/app/components/auth/login/login.component.html
@@ -28,7 +28,14 @@
         </div>
       </form>
     </div>
-    <a href="#/signup">新規登録はこちら</a>
-    <a href="http://stoq.jp">StoQとは？</a>
+    <div>
+      <a href="#/reset_password">パスワードを再設定</a>
+    </div>
+    <div>
+      <a href="#/signup">新規登録</a>
+    </div>
+    <div>
+      <a href="http://stoq.jp">StoQとは？</a>
+    </div>
   </div>
 </div>
