--- a/src/app/components/auth/reset_password/reset_password.component.html
+++ b/src/app/components/auth/reset_password/reset_password.component.html
@@ -3,31 +3,25 @@
 <div class="signup">
   <div class="p-container">
     <h1 class="str-u-text-center"></h1>
-    <p class="str-u-text-center str-u-m20-b p-description">ユーザー登録</p>
-    <form class="str-form" id="signup-form">
+    <p class="str-u-text-center str-u-m20-b p-description">パスワードの再設定</p>
+    <form class="str-form" id="reset_password-form">
       <div class="str-form-group">
         <input type="email" [(ngModel)]="email" name="email" placeholder="メールアドレス" />
       </div>
       <div class="str-form-group">
-        <input type="password" [(ngModel)]="password" name="password" placeholder="パスワード" />
-      </div>
-      <div class="str-form-group">
-        <input type="password" [(ngModel)]="password_confirmation" name="password_confirmation" placeholder="確認用パスワード" />
-      </div>
-      <div class="str-form-group">
         <button type='submit'
                 angulartics2On="click"
-                angularticsEvent="SignupClick"
+                angularticsEvent="PasswordResetClick"
                 angularticsCategory="signup"
                 class="str-btn str-btn-block str-btn-cuxino"
-        >登録</button>
+        >送信</button>
       </div>
     </form>
     <div>
       <a href="#/login">ログイン</a>
     </div>
     <div>
-      <a href="http://stoq.jp">StoQとは？</a>
+      <a href="#/signup">新規登録</a>
     </div>
   </div>
 </div>
