パスワード再発行実装

--- a/src/app/components/auth/password/request.component.html
+++ b/src/app/components/auth/password/request.component.html
@@ -18,10 +18,10 @@
       </div>
     </form>
     <div>
-      <a href="#/login">ログイン</a>
+      <a routerLink="/login" routerLinkActive="active">ログイン</a>
     </div>
     <div>
-      <a href="#/signup">新規登録</a>
+      <a routerLink="/signup" routerLinkActive="active">新規登録</a>
     </div>
   </div>
 </div>
