--- a/src/app/components/auth/signup/signup.component.html
+++ b/src/app/components/auth/signup/signup.component.html
@@ -24,7 +24,7 @@
       </div>
     </form>
     <div>
-      <a href="#/login">ログイン</a>
+      <a routerLink="/login" routerLinkActive="active">ログイン</a>
     </div>
     <div>
       <a href="http://stoq.jp">StoQとは？</a>
