--- a/src/app/components/auth/login/login.component.html
+++ b/src/app/components/auth/login/login.component.html
@@ -29,10 +29,10 @@
       </form>
     </div>
     <div>
-      <a href="#/reset_password">パスワードを再設定</a>
+      <a routerLink="/password/request" routerLinkActive="active">パスワードを再設定</a>
     </div>
     <div>
-      <a href="#/signup">新規登録</a>
+      <a routerLink="/signup" routerLinkActive="active">新規登録</a>
     </div>
     <div>
       <a href="http://stoq.jp">StoQとは？</a>
